JumpScript/tests/baselines/reference/exportAssignmentWithDeclareAndExportModifiers.errors.txt
tests/cases/compiler/exportAssignmentWithDeclareAndExportModifiers.jump(2,1): error TS1120: An export assignment cannot have modifiers.


==== tests/cases/compiler/exportAssignmentWithDeclareAndExportModifiers.jump (1 errors) ====
    var x;
    export declare export = x;
    ~~~~~~
!!! error TS1120: An export assignment cannot have modifiers.